tests/rosetta/out/Pascal/barnsley-fern.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/barnsley-fern.pas
barnsley-fern.pas(14,23) Note: Call to subroutine "operator :=(const source:Int64):Variant;" marked as inline is not inlined
barnsley-fern.pas(15,41) Note: Call to subroutine "operator :=(const source:Variant):LongInt;" marked as inline is not inlined
barnsley-fern.pas(15,52) Note: Call to subroutine "operator :=(const source:Variant):LongInt;" marked as inline is not inlined
barnsley-fern.pas(15,52) Note: Call to subroutine "operator mod(const op1:Variant;const op2:Variant):Variant;" marked as inline is not inlined
barnsley-fern.pas(15,52) Note: Call to subroutine "operator :=(const source:LongInt):Variant;" marked as inline is not inlined
barnsley-fern.pas(23,19) Warning: function result variable of a managed type does not seem to be initialized
barnsley-fern.pas(82,30) Error: Operator is not overloaded: "Double" div "Double"
barnsley-fern.pas(140,13) Error: Incompatible types: got "Constant String" expected "TArray$1$crc862A1656"
barnsley-fern.pas(144,136) Error: Incompatible type for arg no. 1: Got "TArray$1$crc862A1656", expected "TArray$1$crc7766314F"
barnsley-fern.pas(144,15) Error: Incompatible type for arg no. 3: Got "{Array Of Const/Constant Open} Array of TArray$1$crc862A1656", expected "{Open} Array Of Pointer"
barnsley-fern.pas(23,19) Warning: function result variable of a managed type does not seem to be initialized
barnsley-fern.pas(23,19) Warning: function result variable of a managed type does not seem to be initialized
barnsley-fern.pas(151) Fatal: There were 4 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
